# Hybrid-Coding-Container

universal-coding-tool/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
universal-coding-tool/.github/workflows/: ci.yml  lint.yml
universal-coding-tool/backend/: Dockerfile  mypy.ini  pyproject.toml
universal-coding-tool/backend/app/: main.py
universal-coding-tool/backend/app/adapters/: __init__.py  base.py  noop_adapter.py  stub_hf_adapter.py  stub_local_torch_adapter.py  stub_openai_adapter.py
universal-coding-tool/backend/app/api/: __init__.py  artifacts.py  auth.py  health.py  jobs.py  logs.py  policies.py
universal-coding-tool/backend/app/core/: auth.py  docker_runner.py  logging.py  orchestrator.py  policy_engine.py  schemas.py  settings.py  storage.py  vm_runner.py
universal-coding-tool/backend/tests/: test_api.py  test_docker_runner.py  test_policy_engine.py  test_vm_runner.py
universal-coding-tool/container-images/node/: Dockerfile
universal-coding-tool/container-images/python/: Dockerfile  entrypoint.sh
universal-coding-tool/container-images/rust/: Dockerfile
universal-coding-tool/docs/: ARCHITECTURE.md  FAQ.md  OPERATIONS.md  QUICKSTART.md  README.md  SECURITY.md  UI_GUIDE.md
universal-coding-tool/frontend/: .eslintrc.cjs  Dockerfile.dev  index.html  package.json  tsconfig.json  vite.config.ts
universal-coding-tool/frontend/src/: App.tsx  styles.css
universal-coding-tool/ops/: .env.example  Makefile  docker-compose.yml  policies.json
universal-coding-tool/vm/: base-image-notes.md
(+16 files in other folders)
