[project]
name = "universal-coding-tool-backend"
version = "0.1.0"
description = "Hybrid execution orchestrator backend for the Universal Coding Tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Universal Coding Tool"}]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-multipart==0.0.9",
    "passlib[bcrypt]==1.7.4",
    "itsdangerous==2.1.2",
    "docker==6.1.3",
    "starlette==0.36.3",
    "typing-extensions==4.12.2",
    "anyio==4.4.0",
    "sniffio==1.3.1",
    "annotated-types==0.7.0",
    "pydantic-core==2.18.4",
    "python-dotenv==1.0.1",
    "idna==3.7",
    "certifi==2024.7.4",
    "httpcore==1.0.5",
    "h11==0.14.0",
    "email-validator==2.1.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.5.7",
    "mypy==1.10.1",
    "pluggy==1.6.0",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "mypy-extensions==1.0.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "vm: marks tests that require a dedicated VM (deselect with '-m \"not vm\"')"
]
pythonpath = ["app"]
